# KawaiiTray

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
assets/: app.rc
assets/app/assets/themes/cat/: mainfest
assets/app/assets/themes/horse/: mainfest
assets/app/assets/themes/parrot/: mainfest
src/: CMakeLists.txt  app.cpp  app.h  cpu_monitor.cpp  cpu_monitor.h  main.cpp  utils.cpp  utils.h
